Clamp Mac theme painting to reasonable large bounds.

Previously we aimed to clip to the interest rect of the graphics layer in LocalCurrentGraphicsContext. However, in some cases the rect we clip to is the clip inherited from an overflow clip ancestor, which can lead to complexity w.r.t. caching.

Rather than reworking interest rect and cache skipping logic across the code base for Mac theme specific painting purposes, we choose to clamp Mac theme painting to a reasonable bounding size. This means huge elements requiring native element painting will no longer render correctly, but in such cases we may already have been performing poorly.

BUG=592915

Review-Url: https://codereview.chromium.org/1956583002
Cr-Commit-Position: refs/heads/master@{#392468}

Former-commit-id: ec218fb8a6013ab21b83590acf77530cbbce1097