third_party/WebKit/Source/core/paint/ThemePainterMac.mm
@@ -57,7 +57,7 @@ ThemePainterMac::ThemePainterMac(LayoutThemeMac& layoutTheme, Theme* platformThe
 
 bool ThemePainterMac::paintTextField(const LayoutObject& o, const PaintInfo& paintInfo, const IntRect& r)
 {
-    LocalCurrentGraphicsContext localContext(paintInfo.context, &paintInfo.cullRect().m_rect, r);
+    LocalCurrentGraphicsContext localContext(paintInfo.context, r);
 
 #if __MAC_OS_X_VERSION_MIN_REQUIRED <= 1070
     bool useNSTextFieldCell = o.styleRef().hasAppearance()
@@ -91,7 +91,7 @@ bool ThemePainterMac::paintCapsLockIndicator(const LayoutObject&, const PaintInf
 {
     // This draws the caps lock indicator as it was done by
     // WKDrawCapsLockIndicator.
-    LocalCurrentGraphicsContext localContext(paintInfo.context, &paintInfo.cullRect().m_rect, r);
+    LocalCurrentGraphicsContext localContext(paintInfo.context, r);
     CGContextRef c = localContext.cgContext();
     CGMutablePathRef shape = CGPathCreateMutable();
 
@@ -150,7 +150,7 @@ bool ThemePainterMac::paintCapsLockIndicator(const LayoutObject&, const PaintInf
 
 bool ThemePainterMac::paintTextArea(const LayoutObject& o, const PaintInfo& paintInfo, const IntRect& r)
 {
-    LocalCurrentGraphicsContext localContext(paintInfo.context, &paintInfo.cullRect().m_rect, r);
+    LocalCurrentGraphicsContext localContext(paintInfo.context, r);
     _NSDrawCarbonThemeListBox(r, LayoutTheme::isEnabled(o) && !LayoutTheme::isReadOnlyControl(o), YES, YES);
     return false;
 }
@@ -171,7 +171,7 @@ bool ThemePainterMac::paintMenuList(const LayoutObject& o, const PaintInfo& pain
     if (r.width() >= m_layoutTheme.minimumMenuListSize(o.styleRef()))
         inflatedRect = ThemeMac::inflateRect(inflatedRect, size, m_layoutTheme.popupButtonMargins(), zoomLevel);
 
-    LocalCurrentGraphicsContext localContext(paintInfo.context, &paintInfo.cullRect().m_rect, ThemeMac::inflateRectForFocusRing(inflatedRect));
+    LocalCurrentGraphicsContext localContext(paintInfo.context, ThemeMac::inflateRectForFocusRing(inflatedRect));
 
     if (zoomLevel != 1.0f) {
         inflatedRect.setWidth(inflatedRect.width() / zoomLevel);
@@ -229,7 +229,7 @@ bool ThemePainterMac::paintProgressBar(const LayoutObject& layoutObject, const P
         return true;
 
     IntRect clipRect = IntRect(IntPoint(), inflatedRect.size());
-    LocalCurrentGraphicsContext localContext(imageBuffer->canvas(), 1, &clipRect, clipRect);
+    LocalCurrentGraphicsContext localContext(imageBuffer->canvas(), 1, clipRect);
     CGContextRef cgContext = localContext.cgContext();
     HIThemeDrawTrack(&trackInfo, 0, cgContext, kHIThemeOrientationNormal);
 
@@ -451,7 +451,7 @@ static NSControlSize searchFieldControlSizeForFont(const ComputedStyle& style)
 
 bool ThemePainterMac::paintSearchField(const LayoutObject& o, const PaintInfo& paintInfo, const IntRect& r)
 {
-    LocalCurrentGraphicsContext localContext(paintInfo.context, &paintInfo.cullRect().m_rect, r);
+    LocalCurrentGraphicsContext localContext(paintInfo.context, r);
 
     NSSearchFieldCell* search = m_layoutTheme.search();
     m_layoutTheme.setSearchCellState(o, r);
@@ -567,7 +567,7 @@ bool ThemePainterMac::paintSearchFieldResultsDecoration(const LayoutObject& o, c
         paintInfo.context.translate(-unzoomedRect.x(), -unzoomedRect.y());
     }
 
-    LocalCurrentGraphicsContext localContext(paintInfo.context, &paintInfo.cullRect().m_rect, r);
+    LocalCurrentGraphicsContext localContext(paintInfo.context, r);
 
     NSSearchFieldCell* search = m_layoutTheme.search();
     m_layoutTheme.setSearchCellState(*input->layoutObject(), r);
